<resources>
    <string name="app_name">NUMAD21S-TianzeMa</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="about">About</string>
    <string name="previous">Previous</string>
    <string name="clicky">Clicky</string>
    <string name="hello_world">Hello World</string>
    <string name="self_intro">Tianze Ma\n\ntianzema1993@gmail.com</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="default_display">Press a button to start</string>
    <string name="links">Links</string>
    <string name="web_name">Web Name</string>
    <string name="url">URL</string>
    <string name="go">Go!</string>
    <string name="location">Location</string>
    <string name="lat">Latitude:&#160;</string>
    <string name="lon">Longitude:&#160;</string>
    <string name="web">Web Service</string>
    <string name="zip_hint">Please enter any US ZipCode (5 digits)</string>
    <string name="zip_search">Search detailed address</string>
</resources>